tests222/tests2/test163.out
lli: <stdin>:1:1: error: expected top-level entity
line 1: function y is not defined
^
